RESOLVED FIXED155356
REGRESSION (r197956): WebContent process crashes on launch due to unrecognized selector
https://bugs.webkit.org/show_bug.cgi?id=155356
Summary REGRESSION (r197956): WebContent process crashes on launch due to unrecognize...
David Kilzer (:ddkilzer)
Reported 2016-03-11 03:50:18 PST
The WebContent process crashes on launch due to unrecognized selector. Need to add a -respondsToSelector: check.
Attachments
Patch v1 (1.60 KB, patch)
2016-03-11 03:53 PST, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2016-03-11 03:51:24 PST
David Kilzer (:ddkilzer)
Comment 2 2016-03-11 03:53:37 PST
Created attachment 273719 [details] Patch v1
WebKit Commit Bot
Comment 3 2016-03-11 07:54:23 PST
Comment on attachment 273719 [details] Patch v1 Clearing flags on attachment: 273719 Committed r198020: <http://trac.webkit.org/changeset/198020>
WebKit Commit Bot
Comment 4 2016-03-11 07:54:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.