REGRESSION (r197956): WebContent process crashes on launch due to unrecognized selector <http://webkit.org/b/155356>

Reviewed by Alexey Proskuryakov.

* platform/mac/ScrollableAreaMac.mm:
(WebCore::ScrollableArea::systemLanguageIsRTL): Add
-respondsToSelector: check.


Canonical link: https://commits.webkit.org/173474@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198020 268f45cc-cd09-0410-ab3c-d52691b4dbfc