Source/WebCore/platform/mac/ScrollableAreaMac.mm
@@ -40,7 +40,7 @@ namespace WebCore {
 bool ScrollableArea::systemLanguageIsRTL()
 {
 #if PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101200
-    static bool result = [NSScrollerImpPair scrollerLayoutDirection] == NSUserInterfaceLayoutDirectionRightToLeft;
+    static bool result = [[NSScrollerImpPair class] respondsToSelector:@selector(scrollerLayoutDirection)] && [NSScrollerImpPair scrollerLayoutDirection] == NSUserInterfaceLayoutDirectionRightToLeft;
     return result;
 #else
     return false;
